gap fixed

--- a/style.css
+++ b/style.css
@@ -260,7 +260,7 @@ body {
 .sliderButtonContainer {
     text-align: center;
     margin-top: 80px;
-    margin-bottom: 60px;
+    margin-bottom: 100px;
 }
 
 .sliderButtonContainer button {
